--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 	<body>
     <main>
       <div class="input">
-            <div class="prev"><p id="prevNumber">>123+</p></div>
-            <div class="current"><p id="number">1235</p></div>
+            <div class="prev"><p id="prevNumber">></p></div>
+            <div class="current"><p id="number"></p></div>
             </div>
       <div class="button" id="7"><p>7</p></div>
       <div class="button" id="8"><p>8</p></div>
